<resources>
    <string name="app_name">Login</string>
    <string name="users">Username :</string>
    <string name="password">Password :</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget">Forget Password</string>
    <string name="copyright">Copyright2020</string>
</resources>